--- a/form.html
+++ b/form.html
@@ -5,27 +5,27 @@
     <link rel="stylesheet" href="form.css">
     <title>JS Bin</title>
 </head>
-<body>
-<form action="#" method="post">
-    <fieldset>
-        <legend class="test">Personal details</legend>
+<body class="row">
+<form action="#" method="post" class="col-sm-6 col-md-5 col-lg-5 form">
+    <fieldset class="personal-details row">
+        <legend>Personal details</legend>
 
-        <div>
+        <div class="field">
             <label for="name">Your name:</label>
             <input type="text" name="name" id="name">
         </div>
 
-        <div>
+        <div class="field">
             <label for="email">Your email address:</label>
             <input type="email" id="email" name="email">
         </div>
 
-        <div>
+        <div class="field">
             <label for="phoneNumber">Your telephone number:</label>
             <input type="text" name="phoneNumber" id="phoneNumber">
         </div>
 
-        <label for="select-choice">Where are you from?</label>
+        <label for="select-choice" id="select-choice-label">Where are you from?</label>
         <select name="select-choice" id="select-choice">
             <option value="england">England</option>
             <option value="spain">Spain</option>
@@ -34,20 +34,21 @@
         </select>
     </fieldset>
 
-    <fieldset>
+    <fieldset class="car-preference row">
         <legend>Which do you like?</legend>
 
-        <label for="checkbox1">Mercedes</label>
+        <label for="checkbox1" class="col-md-3 checkbox1 radio">Mercedes</label>
         <input type="radio" name="likes" id="checkbox1" value="checkbox1">
 
-        <label for="checkbox2">Audi</label>
+        <label for="checkbox2" class="col-md-3 checkbox2 radio">Audi</label>
         <input type="radio" name="likes" id="checkbox2" value="checkbox2">
+
     </fieldset>
 
-    <fieldset>
+    <fieldset class="feedback row">
         <legend>Feedback</legend>
 
-        <div>
+        <div class="field">
             <label for="textarea">Enter your feedback:</label>
             <textarea cols="40" rows="8" name="textarea" id="textarea"></textarea>
         </div>
@@ -55,16 +56,16 @@
         <h4>How does our product make you feel?</h4>
 
         <div>
-            <label for="radiobutton1">Amazing</label>
+            <label for="radiobutton1" class="col-md-2 radiobutton1 radio">Amazing</label>
             <input type="radio" name="happiness" id="radiobutton1"/>
-            <label for="radiobutton2">Happy</label>
+            <label for="radiobutton2" class="col-md-2 radiobutton2 radio">Happy</label>
             <input type="radio" name="happiness" id="radiobutton2"/>
-            <label for="radiobutton3">Sad</label>
+            <label for="radiobutton3" class="col-md-2 radiobutton3 radio">Sad</label>
             <input type="radio" name="happiness" id="radiobutton3"/>
         </div>
     </fieldset>
 
-    <button>Submit</button>
+    <button class="submit-button">Submit</button>
 </form>
 </body>
 </html>
