styles for feedback radio btns updated

--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
         <h4>How does our product make you feel?</h4>
 
         <div>
-            <label for="radiobutton1" class="col-md-2 radiobutton1 radio">Amazing</label>
+            <label for="radiobutton1" class="radiobutton1 radio">Amazing</label>
             <input type="radio" name="happiness" id="radiobutton1"/>
-            <label for="radiobutton2" class="col-md-2 radiobutton2 radio">Happy</label>
+            <label for="radiobutton2" class="radiobutton2 radio">Happy</label>
             <input type="radio" name="happiness" id="radiobutton2"/>
-            <label for="radiobutton3" class="col-md-2 radiobutton3 radio">Sad</label>
+            <label for="radiobutton3" class="radiobutton3 radio">Sad</label>
             <input type="radio" name="happiness" id="radiobutton3"/>
         </div>
     </fieldset>
